--- a/Kards10/less/main.less
+++ b/Kards10/less/main.less
@@ -38,7 +38,7 @@
 @import "fonts.less";
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 @import "micons/micons.less";
-
+@import "loodse-colors.less";
 /**
  * ===================================================================
  * 02. base style overrides - (_document-setup.scss)
@@ -69,7 +69,7 @@ html, body {
 	height: 100%;
 }
 body {
-	background: #151515;
+	background: @color-black;
 	font-family: "lora-regular", serif;
 	font-size: 1.7rem;
 	line-height: 3rem;
@@ -81,7 +81,7 @@ body {
  * -------------------------------------------------------------------
  */
 a, a:visited {
-	color: #000000;
+	color: @color-blacker;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -89,7 +89,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: #FF0077;
+	color: @color-contrast;
 	outline: 0;
 }
 
@@ -101,7 +101,7 @@ a:hover, a:focus, a:active {
  */
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
 	font-family: "poppins-semibold", sans-serif;
-	color: #313131;
+	color: @color-black;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
 	margin-bottom: 2.1rem;
@@ -188,7 +188,7 @@ blockquote:before {
 	font-size: 8rem;
 	line-height: 0px;
 	margin: 0;
-	color: #313131;
+	color: @color-black;
 	font-family: arial, sans-serif;
 	position: absolute;
 	top: 3rem;
@@ -300,7 +300,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: @color-contrast;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -308,7 +308,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #FF0077;
+	color: @color-contrast;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -330,7 +330,7 @@ th, td {
 	border-bottom: 1px solid #E8E8E8;
 }
 th {
-	color: #313131;
+	color: @color-black;
 	font-family: "poppins-bold", sans-serif;
 }
 td {
@@ -428,7 +428,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: @color-contrast;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -471,7 +471,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid @color-contrast;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -524,7 +524,7 @@ select {
 	border: 0;
 	outline: none;
 	vertical-align: middle;
-	color: #313131;
+	color: @color-black;
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.5rem;
 	line-height: 3rem;
@@ -593,8 +593,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #cc005f;
-	border-bottom: 1px solid #FF0077;
+	color: @color-contrast-dark;
+	border-bottom: 1px solid @color-contrast;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -660,7 +660,7 @@ input[type="button"] {
 	padding: 0 3rem;
 	margin: 0 .3rem 1.2rem 0;
 	background: #d8d8d8;
-	color: #313131;
+	color: @color-black;
 	text-decoration: none;
 	cursor: pointer;
 	text-align: center;
@@ -693,7 +693,7 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-	background: #313131;
+	background: @color-black;
 	color: #FFFFFF;
 }
 .button.button-primary:hover,
@@ -707,7 +707,7 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-	background: #1f1f1f;
+	background: @color-blacker;
 }
 button.full-width, .button.full-width {
 	width: 100%;
@@ -725,7 +725,7 @@ button.large, .button.large {
 }
 button.stroke, .button.stroke {
 	background: transparent !important;
-	border: 3px solid #313131;
+	border: 3px solid @color-black;
 	line-height: 4.8rem;
 }
 button.stroke.medium, .button.stroke.medium {
@@ -735,8 +735,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #FF0077;
-	color: #FF0077;
+	border: 3px solid @color-contrast;
+	color: @color-contrast;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -803,7 +803,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	line-height: 6rem;
 	text-indent: 0;
 	background: transparent;
-	color: #313131;
+	color: @color-black;
 }
 
 /**
@@ -924,7 +924,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #FF0077;
+	color: @color-contrast;
 }
 .stats-tabs li a em {
 	display: block;
@@ -955,14 +955,14 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	left: 0;
 	top: -3rem;
 	font-family: "poppins-bold", sans-serif;
-	color: #313131;
+	color: @color-black;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 }
 .skill-bars li .progress {
-	background: #313131;
+	background: @color-black;
 	position: relative;
 	height: 100%;
 }
@@ -975,7 +975,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: white;
 	font-size: 1.1rem;
 	line-height: 1;
-	background: #313131;
+	background: @color-black;
 	padding: .6rem .6rem;
 	border-radius: 3px;
 }
@@ -986,7 +986,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-left: -5px;
 	border-right: 5px solid transparent;
 	border-left: 5px solid transparent;
-	border-top: 5px solid #313131;
+	border-top: 5px solid @color-black;
 	content: "";
 }
 
@@ -1035,12 +1035,12 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h1 {
 	font-family: "poppins-semibold", serif;
 	font-size: 3.6rem;
-	color: #313131;
+	color: @color-black;
 	line-height: 1.25;
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #FF0077;
+	color: @color-contrast;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1094,7 +1094,7 @@ header .row {
 }
 header .top-bar {
 	display: block;
-	background: #000000;
+	background: white;
 	min-width: 220px;
 	min-height: 66px;
 	position: absolute;
@@ -1105,7 +1105,7 @@ header .logo {
 	float: left;
 	margin-left: 20px;
 	margin-right: 50px;
-	margin-top: 25px;
+	margin-top: 20px;
 	position: relative;
 }
 header .logo a {
@@ -1116,10 +1116,10 @@ header .logo a {
 	font: 0/0 a;
 	text-shadow: none;
 	color: transparent;
-	width: 92px;
-	height: 15px;
-	background: url(@logo-img-url) no-repeat center;
-	background-size: 92px 15px;
+	width: 100px;
+	height: 30px;
+	background: url(@loodse-logo-img-url) no-repeat center;
+	background-size: 100px 30px;
 }
 
 /**
@@ -1137,7 +1137,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: @color-contrast;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1195,7 +1195,7 @@ header .logo a {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #ff0077;
+	background-color: @color-contrast;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1228,7 +1228,7 @@ header .logo a {
 
 /* dropdown nav */
 .main-navigation {
-	background: #000000;
+	background: @color-blacker;
 	padding: 24px 30px 42px;
 	margin: 0;
 	width: 100%;
@@ -1251,12 +1251,12 @@ header .logo a {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #FF0077;
+	color: @color-contrast;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #FF0077;
+	color: @color-contrast;
 }
 
 /**
@@ -1293,7 +1293,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(@intro-bg-img-url) no-repeat center bottom;
+	background: white url(@loodse-bg-img-url) no-repeat center bottom;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -1311,8 +1311,8 @@ header .logo a {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #111111;
-	opacity: .85;
+	background: @color-contrast-dark;
+	opacity: .10;
 }
 
 .intro-content {
@@ -1336,7 +1336,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #cc005f;
+	color: whitesmoke;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1383,7 +1383,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: @color-contrast-dark;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1415,7 +1415,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: #cc005f;
+	color: @color-contrast-dark;
 }
 
 /**
@@ -1536,7 +1536,7 @@ header .logo a {
 }
 .about-content .info-list li strong {
 	font-family: "poppins-bold", sans-serif;
-	color: #313131;
+	color: @color-black;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.5rem;
@@ -1628,7 +1628,7 @@ header .logo a {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #FF0077;
+	color: @color-contrast;
 }
 
 #resume .resume-timeline {
@@ -1657,7 +1657,7 @@ header .logo a {
 	height: 4.8rem;
 	width: 4.8rem;
 	line-height: 4.8rem;
-	background: #313131;
+	background: @color-black;
 	border-radius: 50%;
 	text-align: center;
 	color: #FFFFFF;
@@ -1955,7 +1955,7 @@ header .logo a {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #cc005f;
+	background: @color-contrast-dark;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2066,10 +2066,10 @@ header .logo a {
 	margin-left: -40px;
 }
 .section-ads h2 a, .section-ads h2 a:visited {
-	color: #313131;
+	color: @color-black;
 }
 .section-ads span {
-	color: #3F0D39;
+	color: @color-blacker;
 }
 
 /**
@@ -2094,7 +2094,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #313131 url(@bg-img-url) no-repeat center;
+	background: @color-black url(@bg-img-url) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -2109,7 +2109,7 @@ header .logo a {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #151515;
+	background: @color-blacker;
 	opacity: .9;
 }
 
@@ -2121,7 +2121,7 @@ header .logo a {
 	color: white;
 }
 #services .section-intro h5 {
-	color: #FF0077;
+	color: @color-contrast;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2143,7 +2143,7 @@ header .logo a {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #FF0077;
+	color: @color-contrast;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2171,7 +2171,7 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: @color-contrast;
 }
 
 
@@ -2182,7 +2182,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: #990047;
+	background: @color-contrast-dark;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2199,7 +2199,7 @@ header .logo a {
 }
 #stats .icon-part i {
 	font-size: 4.8rem;
-	color: #000000;
+	color: @color-blacker;
 }
 #stats .stat-count {
 	color: #FFFFFF;
@@ -2249,7 +2249,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #contact {
-	background: #151515;
+	background: @color-blacker;
 	padding-top: 12rem;
 	padding-bottom: 7.2rem;
 }
@@ -2257,7 +2257,7 @@ header .logo a {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: #FF0077;
+	color: @color-contrast;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2310,7 +2310,7 @@ header .logo a {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: @color-contrast;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2319,7 +2319,7 @@ header .logo a {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid @color-contrast;
 	content: "";
 }
 #contact input[type="text"],
@@ -2341,7 +2341,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: #FF0077;
+	border-color: @color-contrast;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2349,7 +2349,7 @@ header .logo a {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: @color-contrast;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2361,15 +2361,15 @@ header .logo a {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: @color-contrast;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: #cc005f;
+	background: @color-contrast-dark;
 }
 #message-warning, #message-success {
 	display: none;
-	background: #0d0d0d;
+	background: @color-blacker;
 	border-radius: 3px;
 	padding: 3rem;
 	margin-bottom: 3.6rem;
@@ -2379,7 +2379,7 @@ header .logo a {
 	color: #fa0003;
 }
 #message-success {
-	color: #FF0077;
+	color: @color-contrast;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2424,7 +2424,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #FF0077;
+	color: @color-contrast;
 }
 
 /**
@@ -2498,7 +2498,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #FF0077;
+	color: @color-contrast;
 }
 footer .row {
 	max-width: 900px;
@@ -2577,7 +2577,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #cc005f;
+	background: @color-contrast-dark;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
@@ -2592,7 +2592,7 @@ footer .copyright span:last-child::after {
 	line-height: inherit;
 }
 #go-top a:hover {
-	background: #000000;
+	background: @color-blacker;
 }
 
 /*# sourceMappingURL=main.css.map */
