add final pdf theme fields as comments

--- a/resume.hbs
+++ b/resume.hbs
@@ -41,6 +41,8 @@
 <header>
     <div class="row">
 
+        <!--TODO use for PDF print-->
+        <!--<div class="top-bar" style="visibility: hidden">-->
         <div class="top-bar">
             <a class="menu-toggle" href="#"><span>Menu</span></a>
 
@@ -184,6 +186,8 @@
         {{/if}}
     </div>
 
+    <!-- TODO TS add to print theme-->
+    <!--<div class="row button-section" style="visibility: hidden">-->
     <div class="row button-section">
         <div class="col-twelve">
             <a href="https://www.loodse.com/contact" title="Hire Me" class="button stroke ">Contact Us</a>
