fix skill li size (hacky)

--- a/Kards10/less/main.less
+++ b/Kards10/less/main.less
@@ -1053,13 +1053,14 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .skill-bars {
   list-style: none;
   margin: 6rem 0 3rem;
+  line-height: 1.5rem;
 }
 
 .skill-bars li {
   height: .6rem;
   background: #a1a1a1;
   width: 100%;
-  margin-bottom: 8rem;
+  margin-bottom: 12rem;
   padding: 0;
   position: relative;
 }
