--- a/resume.hbs
+++ b/resume.hbs
@@ -174,6 +174,7 @@
                         <li>
                             <div class="progress percent{{skillLevel level}}"><span>{{skillLevel level}}%</span></div>
                             <strong>{{name}}</strong>
+                            <div style="height: 0.7rem"></div>
                             {{#if keywords}}
                                 <small>{{join keywords ", "}}</small>
                             {{/if}}
@@ -242,7 +243,7 @@
                             </div>
 
                             <div class="timeline-content">
-                                <h4>{{name}}, {{location}}</h4>
+                                <h4>{{name}} {{#if location}}, {{location}}{{/if}}</h4>
                                 <b><p>{{#markdown}}{{summary}}{{/markdown}}</p></b>
                                 {{#if highlights}}
                                     <ul>
