update comment for PDF

--- a/resume.hbs
+++ b/resume.hbs
@@ -188,6 +188,7 @@
     </div>
 
     <!-- TODO TS add to print theme-->
+    <!--TODO use for PDF print-->
     <!--<div class="row button-section" style="visibility: hidden">-->
     <div class="row button-section">
         <div class="col-twelve">
