update CV styling

--- a/Kards10/less/loodse-colors.less
+++ b/Kards10/less/loodse-colors.less
@@ -1,5 +1,5 @@
-@color-contrast: #44a2d7;
-@color-contrast-dark: #286188;
+@color-contrast: #00d9d2;
+@color-contrast-dark: #0081ae;
 @color-black: #253e62;
 @color-blacker: #10102a;
 
