--- a/Kards10/less/main.less
+++ b/Kards10/less/main.less
@@ -1497,7 +1497,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-  background: white url(@loodse-bg-img-url) no-repeat center bottom;
+  background: white url(@loodse-bg-new-img-url) no-repeat center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
