fix rendering issues for skills and pdf

--- a/Kards10/less/loodse-colors.less
+++ b/Kards10/less/loodse-colors.less
@@ -1,5 +1,6 @@
 @color-contrast: #00d9d2;
 @color-contrast-dark: #0081ae;
+@color-contrast-dark-2: #003551;
 @color-black: #253e62;
 @color-blacker: #10102a;
 
