--- a/Kards10/css/styles.css
+++ b/Kards10/css/styles.css
@@ -1,5 +1,5 @@
 /**
- * ===================================================================
+ * =================================================================== 
  *
  *  Kards v1.0 Base Stylesheet
  *  url: styleshout.com
@@ -11,13 +11,13 @@
  *  03. grid
  *  04. MISC
  *
- * ===================================================================
+ * =================================================================== 
  */
-/**
+/** 
  * ===================================================================
  * 01. reset - normalize.css v3.0.2 | MIT License | git.io/normalize
  *
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 html {
@@ -200,11 +200,11 @@ td,
 th {
   padding: 0;
 }
-/**
+/** 
  * ===================================================================
  * 02. basic/base setup styles - (_basic.scss)
  *
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 html {
   font-size: 62.5%;
@@ -231,7 +231,7 @@ button {
 }
 /**
  * Media - (_basic.scss)
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 img,
 video {
@@ -240,7 +240,7 @@ video {
 }
 /**
  * Typography resets - (_basic.scss)
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 div,
 dl,
@@ -298,7 +298,7 @@ li {
 }
 /**
  * links - (_basic.scss)
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 a {
   text-decoration: none;
@@ -309,7 +309,7 @@ a img {
 }
 /**
  * inputs - (_basic.scss)
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 fieldset {
   margin: 0;
@@ -329,11 +329,11 @@ textarea {
   -o-appearance: none;
   appearance: none;
 }
-/**
+/** 
  * ===================================================================
  * 03. grid - (_grid.scss)
  *
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 .row {
   width: 94%;
@@ -410,7 +410,7 @@ textarea {
 }
 /**
  * small screens - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 1024px) {
   .row .row {
@@ -423,7 +423,7 @@ textarea {
 }
 /**
  * tablets - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 768px) {
   .row {
@@ -461,7 +461,7 @@ textarea {
 }
 /**
  * large mobile devices - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 600px) {
   .row {
@@ -490,7 +490,7 @@ textarea {
 }
 /**
  * small mobile devices - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 400px) {
   .row .row {
@@ -511,11 +511,11 @@ textarea {
     float: none;
   }
 }
-/**
+/** 
  * ===================================================================
  * block grids - (_grid.scss)
  *
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 [class*="block-"]:before,
 [class*="block-"]:after {
@@ -538,7 +538,7 @@ textarea {
   width: 50%;
 }
 /**
- * Clearing for block grid columns. Allow columns with
+ * Clearing for block grid columns. Allow columns with 
  * different heights to align properly.
  */
 .block-1-6 .bgrid:nth-child(6n+1),
@@ -549,7 +549,7 @@ textarea {
 }
 /**
  * small screens - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 1024px) {
   .block-s-1-6 .bgrid {
@@ -580,7 +580,7 @@ textarea {
 }
 /**
  * tablets - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 768px) {
   .block-tab-1-6 .bgrid {
@@ -611,7 +611,7 @@ textarea {
 }
 /**
  * large mobile devices - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 600px) {
   .block-mob-1-6 .bgrid {
@@ -642,7 +642,7 @@ textarea {
 }
 /**
  * stack on small mobile devices - (_grid.scss)
- * ---------------------------------------------------------------
+ * --------------------------------------------------------------- 
  */
 @media screen and (max-width: 400px) {
   .stack .bgrid {
@@ -653,11 +653,11 @@ textarea {
     margin-right: 0;
   }
 }
-/**
+/** 
  * ===================================================================
  * 04. MISC  - (_grid.scss)
  *
- * -------------------------------------------------------------------
+ * ------------------------------------------------------------------- 
  */
 /**
  * Clearing - (http://nicolasgallagher.com/micro-clearfix-hack/
@@ -671,7 +671,7 @@ textarea {
   clear: both;
 }
 /**
- * Misc Helper Styles
+ * Misc Helper Styles 
  */
 .hide {
   display: none;
@@ -2424,20 +2424,21 @@ input::-moz-focus-inner {
   height: 0.6rem;
   background: #a1a1a1;
   width: 100%;
-  margin-bottom: 12rem;
+  margin-bottom: 13rem;
   padding: 0;
   position: relative;
 }
 .skill-bars li strong {
   position: absolute;
   left: 0;
-  top: -3rem;
+  top: -4rem;
+  width: 95%;
   font-family: "poppins-bold", sans-serif;
   color: #253e62;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   font-size: 1.5rem;
-  line-height: 2.4rem;
+  line-height: 2rem;
 }
 .skill-bars li .progress {
   background: #253e62;
@@ -2817,12 +2818,12 @@ header .logo a {
 }
 .intro-overlay {
   position: absolute;
-  top: 0;
+  top: 51%;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: #0081ae;
-  opacity: 0.10;
+  height: 51%;
+  background: #003551;
+  opacity: 1;
 }
 .intro-content {
   display: table-cell;
@@ -4075,9 +4076,36 @@ footer .copyright span:last-child::after {
 }
 /*# sourceMappingURL=main.css.map */
 /**
- * ===================================================================
+ * small screens - (_grid.scss)
+ * ---------------------------------------------------------------
+ */
+@media print {
+  .row .row {
+    margin-left: -18px;
+    margin-right: -18px;
+  }
+  [class*="col-"] {
+    padding: 14px 0;
+  }
+  header .top-bar {
+    display: none;
+  }
+  .button-section {
+    display: none;
+  }
+  #go-top a {
+    display: none;
+  }
+  section {
+    padding-bottom: 0em !important;
+    padding-top: 2em !important;
+    page-break-inside: avoid;
+  }
+}
+/**
+ * =================================================================== 
  *
- *  Kards v1.0 Vendor/Third Party CSS
+ *  Kards v1.0 Vendor/Third Party CSS 
  *  url: styleshout.com
  *  03-01-2016
  *  ------------------------------------------------------------------
@@ -4085,9 +4113,9 @@ footer .copyright span:last-child::after {
  *  01. Core Owl Carousel CSS File
  *  02. Magnific Popup CSS
  *
- * ===================================================================
+ * =================================================================== 
  */
-/*
+/* 
  *  01. Core Owl Carousel CSS File
  *	 v1.3.3
  */
@@ -4153,8 +4181,8 @@ footer .copyright span:last-child::after {
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
 }
-/*
- *  Owl Carousel CSS3 Transitions
+/* 
+ *  Owl Carousel CSS3 Transitions 
  *  v1.3.2
  */
 .owl-origin {
@@ -4432,7 +4460,7 @@ footer .copyright span:last-child::after {
     transform: scale(1.5);
   }
 }
-/*
+/* 
  *  02. Magnific Popup CSS
  */
 .mfp-bg {
