--- a/Kards10/less/main.less
+++ b/Kards10/less/main.less
@@ -1,5 +1,5 @@
 /**
- * =================================================================== 
+ * ===================================================================
  *
  *  Kards v1.0 Main Stylesheet
  *  url: styleshout.com
@@ -11,7 +11,7 @@
  *  03. typography & general theme styles
  *  04. preloader
  *  05. forms
- *  06. buttons 
+ *  06. buttons
  *  07. other components
  *  08. common styles
  *  09. header styles
@@ -25,13 +25,13 @@
  *  17. contact
  *  18. footer
  *
- * =================================================================== 
+ * ===================================================================
  */
 /**
  * ===================================================================
  * 01. webfonts and iconfonts - (_document-setup.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 @import "fonts.less";
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
@@ -42,7 +42,7 @@
  * ===================================================================
  * 02. base style overrides - (_document-setup.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 html {
   font-size: 10px;
@@ -96,11 +96,11 @@ a:hover, a:focus, a:active {
   outline: 0;
 }
 
-/** 
+/**
  * ===================================================================
  * 03. typography & general theme styles - (_document-setup.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
   font-family: "poppins-semibold", sans-serif;
@@ -302,7 +302,7 @@ hr {
 }
 
 /**
- * Lists - (_document-setup.scss)  
+ * Lists - (_document-setup.scss)
  * -------------------------------------------------------------------
  */
 ol {
@@ -359,7 +359,7 @@ dd {
 }
 
 /**
- * tables - (_document-setup.scss)  
+ * tables - (_document-setup.scss)
  * -------------------------------------------------------------------
  */
 table {
@@ -398,7 +398,7 @@ th:last-child, td:last-child {
 }
 
 /**
- * Spacing - (_document-setup.scss)  
+ * Spacing - (_document-setup.scss)
  * -------------------------------------------------------------------
  */
 button, .button {
@@ -427,7 +427,7 @@ form,
 }
 
 /**
- * floated image - (_document-setup.scss)  
+ * floated image - (_document-setup.scss)
  * -------------------------------------------------------------------
  */
 img.pull-right {
@@ -439,7 +439,7 @@ img.pull-left {
 }
 
 /**
- * block grid paddings - (_document-setup.scss) 
+ * block grid paddings - (_document-setup.scss)
  * -------------------------------------------------------------------
  */
 .bgrid {
@@ -496,11 +496,11 @@ img.pull-left {
   height: 6px;
 }
 
-/** 
+/**
  * ===================================================================
  * 04. preloader - (_preloader-1.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #preloader {
   position: fixed;
@@ -564,11 +564,11 @@ img.pull-left {
   }
 }
 
-/** 
+/**
  * ===================================================================
  * 05. forms - (_forms.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 fieldset {
   border: none;
@@ -695,7 +695,7 @@ label > input[type="checkbox"], label > input[type="radio"] {
 }
 
 /**
- * Style Placeholder Text  
+ * Style Placeholder Text
  * -
  */
 ::-webkit-input-placeholder {
@@ -718,11 +718,11 @@ label > input[type="checkbox"], label > input[type="radio"] {
   color: #a1a1a1 !important;
 }
 
-/** 
+/**
  * ===================================================================
  * 06. buttons - (_button-essentials.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 .button,
 a.button,
@@ -838,7 +838,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ===================================================================
  * 07. other components - (_others.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 
 /**
@@ -887,7 +887,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  */
 
 /**
- * drop cap 
+ * drop cap
  */
 .drop-cap:first-letter {
   float: left;
@@ -949,7 +949,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
   content: counter(definitions, decimal) ". ";
 }
 
-/** 
+/**
  * Pull Quotes
  * -----------
  * markup:
@@ -960,7 +960,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  *		</blockquote>
  *	</aside>
  *
- * --------------------------------------------------------------------- 
+ * ---------------------------------------------------------------------
  */
 .pull-quote {
   position: relative;
@@ -995,7 +995,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
   content: none;
 }
 
-/** 
+/**
  * Stats Tab
  * ---------
  * markup:
@@ -1060,7 +1060,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
   height: .6rem;
   background: #a1a1a1;
   width: 100%;
-  margin-bottom: 12rem;
+  margin-bottom: 13rem;
   padding: 0;
   position: relative;
 }
@@ -1068,13 +1068,14 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .skill-bars li strong {
   position: absolute;
   left: 0;
-  top: -3rem;
+  top: -4rem;
+  width: 95%;
   font-family: "poppins-bold", sans-serif;
   color: @color-black;
   text-transform: uppercase;
   letter-spacing: .2rem;
   font-size: 1.5rem;
-  line-height: 2.4rem;
+  line-height: 2rem;
 }
 
 .skill-bars li .progress {
@@ -1192,7 +1193,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ===================================================================
  * 08. common styles (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 .grey-section {
   background: #ebebeb;
@@ -1234,7 +1235,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 /**
  * responsive:
  * common styles
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 @media only screen and (max-width: 768px) {
   .section-intro {
@@ -1267,7 +1268,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ===================================================================
  * 09. header styles - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 header {
   position: fixed;
@@ -1315,7 +1316,7 @@ header .logo a {
 
 /**
  * menu toggle - (_layout.css)
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 .menu-toggle {
   float: left;
@@ -1464,7 +1465,7 @@ header .logo a {
 /**
  * responsive:
  * header styles
- * --------------------------------------------------------------- 
+ * ---------------------------------------------------------------
  */
 @media only screen and (max-width: 1024px) {
   header .top-bar {
@@ -1492,9 +1493,9 @@ header .logo a {
 
 /**
  * ===================================================================
- * 10. intro - (_layout.scss) 
+ * 10. intro - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #intro {
   background: white url(@loodse-bg-new-img-url) no-repeat center bottom;
@@ -1512,12 +1513,12 @@ header .logo a {
 
 .intro-overlay {
   position: absolute;
-  top: 0;
+  top: 51%;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: @color-contrast-dark;
-  opacity: .10;
+  height: 51%;
+  background: @color-contrast-dark-2;
+  opacity: 1;
 }
 
 .intro-content {
@@ -1638,7 +1639,7 @@ header .logo a {
 /**
  * responsive:
  * Intro
- * --------------------------------------------------------------- 
+ * ---------------------------------------------------------------
  */
 @media only screen and (max-width: 1024px) {
   .intro-content h1 {
@@ -1717,7 +1718,7 @@ header .logo a {
  * ===================================================================
  * 11. about - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #about {
   background: #FFFFFF;
@@ -1808,7 +1809,7 @@ header .logo a {
 /**
  * responsive:
  * about
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 @media only screen and (max-width: 1024px) {
   .intro-info {
@@ -1864,11 +1865,11 @@ header .logo a {
   }
 }
 
-/** 
+/**
  * ===================================================================
  * 12. resume - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 .resume-element {
   padding-top: 12rem;
@@ -1970,7 +1971,7 @@ header .logo a {
 /**
  * responsive:
  * resume
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 @media only screen and (max-width: 1024px) {
   .resume-element .timeline-header {
@@ -2063,7 +2064,7 @@ header .logo a {
  * ===================================================================
  * 13. portfolio - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #portfolio {
   background: #FFFFFF;
@@ -2153,7 +2154,7 @@ header .logo a {
 /**
  * responsive:
  * portfolio
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 @media only screen and (max-width: 1024px) {
   #portfolio .folio-title {
@@ -2264,7 +2265,7 @@ header .logo a {
 
 /**
  * transition effect for modal popup - (_layout.scss)
- * ------------------------------------------------------------------ 
+ * ------------------------------------------------------------------
  */
 
 /* overlay at start */
@@ -2316,11 +2317,11 @@ header .logo a {
   transform: translateY(-100%);
 }
 
-/** 
+/**
  * ===================================================================
  * 14. call-to-action section - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #cta {
   padding-top: 10.2rem;
@@ -2349,7 +2350,7 @@ header .logo a {
 
 /**
  * section ads - (_layout.scss)
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 .section-ads h2 {
   position: relative;
@@ -2395,7 +2396,7 @@ header .logo a {
  * ===================================================================
  * 15. services - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #services {
   background: @color-black url(@bg-img-url) no-repeat center;
@@ -2495,7 +2496,7 @@ header .logo a {
  * ===================================================================
  * 16. stats - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #stats {
   background: @color-contrast-dark;
@@ -2571,7 +2572,7 @@ header .logo a {
  * ===================================================================
  * 17. contact - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #contact {
   background: @color-blacker;
@@ -2785,7 +2786,7 @@ header .logo a {
 
 /**
  * loader animation - (_layout.scss)
- * --------------------------------------------------------------- 
+ * ---------------------------------------------------------------
  */
 .s-loader {
   margin: 1.2rem auto 3rem;
@@ -2847,7 +2848,7 @@ header .logo a {
  * ===================================================================
  * 18. footer - (_layout.scss)
  *
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 footer {
   padding-bottom: 3rem;
@@ -2933,7 +2934,7 @@ footer .copyright span:last-child::after {
 
 /**
  * go to top - (_layout.scss)
- * ------------------------------------------------------------------- 
+ * -------------------------------------------------------------------
  */
 #go-top {
   position: fixed;
@@ -2972,3 +2973,4 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+@import "print.less";
